library/src/libqevent.h

typedef struct QEventPoint QEventPoint;
typedef struct QInputDevice QInputDevice;
typedef struct QInputEvent QInputEvent;
typedef struct QNativeGestureEvent QNativeGestureEvent;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QPointerEvent QPointerEvent;
typedef struct QPointingDevice QPointingDevice;
typedef struct QSinglePointEvent QSinglePointEvent;
typedef struct QTabletEvent QTabletEvent;
typedef struct QWheelEvent QWheelEvent;
QTLIBC_API QInputDevice* QInputEvent_Device(const QInputEvent* self);
QTLIBC_API int QInputEvent_DeviceType(const QInputEvent* self);
QTLIBC_API int QInputEvent_Modifiers(const QInputEvent* self);
QTLIBC_API void QInputEvent_SetModifiers(QInputEvent* self, int modifiers);
QTLIBC_API unsigned long long QInputEvent_Timestamp(const QInputEvent* self);
QTLIBC_API QPointingDevice* QPointerEvent_PointingDevice(const QPointerEvent* self);
QTLIBC_API int QPointerEvent_PointerType(const QPointerEvent* self);
QTLIBC_API void QPointerEvent_SetTimestamp(QPointerEvent* self, unsigned long long timestamp);
QTLIBC_API ptrdiff_t QPointerEvent_PointCount(const QPointerEvent* self);
QTLIBC_API QEventPoint* QPointerEvent_Point(QPointerEvent* self, ptrdiff_t i);
QTLIBC_API libqt_list /* of QEventPoint* */ QPointerEvent_Points(const QPointerEvent* self);
QTLIBC_API QEventPoint* QPointerEvent_PointById(QPointerEvent* self, int id);
QTLIBC_API bool QPointerEvent_AllPointsGrabbed(const QPointerEvent* self);
QTLIBC_API bool QPointerEvent_AllPointsAccepted(const QPointerEvent* self);
QTLIBC_API void QPointerEvent_SetAccepted(QPointerEvent* self, bool accepted);
QTLIBC_API QObject* QPointerEvent_ExclusiveGrabber(const QPointerEvent* self, QEventPoint* point);
QTLIBC_API void QPointerEvent_SetExclusiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* exclusiveGrabber);
QTLIBC_API void QPointerEvent_ClearPassiveGrabbers(QPointerEvent* self, QEventPoint* point);
QTLIBC_API bool QPointerEvent_AddPassiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* grabber);
QTLIBC_API bool QPointerEvent_RemovePassiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* grabber);
QTLIBC_API int QSinglePointEvent_Button(const QSinglePointEvent* self);
QTLIBC_API int QSinglePointEvent_Buttons(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_Position(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_ScenePosition(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_GlobalPosition(const QSinglePointEvent* self);
QTLIBC_API bool QSinglePointEvent_IsBeginEvent(const QSinglePointEvent* self);
QTLIBC_API bool QSinglePointEvent_IsUpdateEvent(const QSinglePointEvent* self);
QTLIBC_API bool QSinglePointEvent_IsEndEvent(const QSinglePointEvent* self);
QTLIBC_API QObject* QSinglePointEvent_ExclusivePointGrabber(const QSinglePointEvent* self);
QTLIBC_API void QSinglePointEvent_SetExclusivePointGrabber(QSinglePointEvent* self, QObject* exclusiveGrabber);
QTLIBC_API QWheelEvent* QWheelEvent_new(QPointF* pos, QPointF* globalPos, QPoint* pixelDelta, QPoint* angleDelta, int buttons, int modifiers, int phase, bool inverted);
QTLIBC_API QWheelEvent* QWheelEvent_new2(QPointF* pos, QPointF* globalPos, QPoint* pixelDelta, QPoint* angleDelta, int buttons, int modifiers, int phase, bool inverted, int source);
QTLIBC_API QWheelEvent* QWheelEvent_new3(QPointF* pos, QPointF* globalPos, QPoint* pixelDelta, QPoint* angleDelta, int buttons, int modifiers, int phase, bool inverted, int source, QPointingDevice* device);
QTLIBC_API QWheelEvent* QWheelEvent_Clone(const QWheelEvent* self);
QTLIBC_API QPoint* QWheelEvent_PixelDelta(const QWheelEvent* self);
QTLIBC_API QPoint* QWheelEvent_AngleDelta(const QWheelEvent* self);
QTLIBC_API int QWheelEvent_Phase(const QWheelEvent* self);
QTLIBC_API bool QWheelEvent_Inverted(const QWheelEvent* self);
QTLIBC_API bool QWheelEvent_IsInverted(const QWheelEvent* self);
QTLIBC_API bool QWheelEvent_HasPixelDelta(const QWheelEvent* self);
QTLIBC_API bool QWheelEvent_IsBeginEvent(const QWheelEvent* self);
QTLIBC_API bool QWheelEvent_IsUpdateEvent(const QWheelEvent* self);
QTLIBC_API bool QWheelEvent_IsEndEvent(const QWheelEvent* self);
QTLIBC_API int QWheelEvent_Source(const QWheelEvent* self);
QTLIBC_API void QWheelEvent_Delete(QWheelEvent* self);
QTLIBC_API QTabletEvent* QTabletEvent_new(int t, QPointingDevice* device, QPointF* pos, QPointF* globalPos, double pressure, float xTilt, float yTilt, float tangentialPressure, double rotation, float z, int keyState, int button, int buttons);
QTLIBC_API QTabletEvent* QTabletEvent_Clone(const QTabletEvent* self);
QTLIBC_API QPoint* QTabletEvent_Pos(const QTabletEvent* self);
QTLIBC_API QPoint* QTabletEvent_GlobalPos(const QTabletEvent* self);
QTLIBC_API QPointF* QTabletEvent_PosF(const QTabletEvent* self);
QTLIBC_API QPointF* QTabletEvent_GlobalPosF(const QTabletEvent* self);
QTLIBC_API int QTabletEvent_X(const QTabletEvent* self);
QTLIBC_API int QTabletEvent_Y(const QTabletEvent* self);
QTLIBC_API int QTabletEvent_GlobalX(const QTabletEvent* self);
QTLIBC_API int QTabletEvent_GlobalY(const QTabletEvent* self);
QTLIBC_API double QTabletEvent_HiResGlobalX(const QTabletEvent* self);
QTLIBC_API double QTabletEvent_HiResGlobalY(const QTabletEvent* self);
QTLIBC_API long long QTabletEvent_UniqueId(const QTabletEvent* self);
QTLIBC_API double QTabletEvent_Pressure(const QTabletEvent* self);
QTLIBC_API double QTabletEvent_Rotation(const QTabletEvent* self);
QTLIBC_API double QTabletEvent_Z(const QTabletEvent* self);
QTLIBC_API double QTabletEvent_TangentialPressure(const QTabletEvent* self);
QTLIBC_API double QTabletEvent_XTilt(const QTabletEvent* self);
QTLIBC_API double QTabletEvent_YTilt(const QTabletEvent* self);
QTLIBC_API void QTabletEvent_Delete(QTabletEvent* self);
QTLIBC_API QNativeGestureEvent* QNativeGestureEvent_new(int typeVal, QPointingDevice* dev, QPointF* localPos, QPointF* scenePos, QPointF* globalPos, double value, unsigned long long sequenceId, unsigned long long intArgument);
QTLIBC_API QNativeGestureEvent* QNativeGestureEvent_Clone(const QNativeGestureEvent* self);
QTLIBC_API int QNativeGestureEvent_GestureType(const QNativeGestureEvent* self);
QTLIBC_API int QNativeGestureEvent_FingerCount(const QNativeGestureEvent* self);
QTLIBC_API void QNativeGestureEvent_Delete(QNativeGestureEvent* self);