src/qt/libqevent.bf

extension CQt
{
	[LinkName("QWheelEvent_new")]
	public static extern void* QWheelEvent_new(void* pos, void* globalPos, void pixelDelta, void angleDelta, int64 buttons, int64 modifiers, int64 phase, bool inverted);
	[LinkName("QWheelEvent_new2")]
	public static extern void* QWheelEvent_new2(void* pos, void* globalPos, void pixelDelta, void angleDelta, int64 buttons, int64 modifiers, int64 phase, bool inverted, int64 source);
	[LinkName("QWheelEvent_new3")]
	public static extern void* QWheelEvent_new3(void* pos, void* globalPos, void pixelDelta, void angleDelta, int64 buttons, int64 modifiers, int64 phase, bool inverted, int64 source, void* device);
	[LinkName("QWheelEvent_Clone")]
	public static extern void* QWheelEvent_Clone(void* c_this);
	[LinkName("QWheelEvent_PixelDelta")]
	public static extern void QWheelEvent_PixelDelta(void* c_this);
	[LinkName("QWheelEvent_AngleDelta")]
	public static extern void QWheelEvent_AngleDelta(void* c_this);
	[LinkName("QWheelEvent_Phase")]
	public static extern int64 QWheelEvent_Phase(void* c_this);
	[LinkName("QWheelEvent_Inverted")]
	public static extern bool QWheelEvent_Inverted(void* c_this);
	[LinkName("QWheelEvent_IsInverted")]
	public static extern bool QWheelEvent_IsInverted(void* c_this);
	[LinkName("QWheelEvent_HasPixelDelta")]
	public static extern bool QWheelEvent_HasPixelDelta(void* c_this);
	[LinkName("QWheelEvent_IsBeginEvent")]
	public static extern bool QWheelEvent_IsBeginEvent(void* c_this);
	[LinkName("QWheelEvent_IsUpdateEvent")]
	public static extern bool QWheelEvent_IsUpdateEvent(void* c_this);
	[LinkName("QWheelEvent_IsEndEvent")]
	public static extern bool QWheelEvent_IsEndEvent(void* c_this);
	[LinkName("QWheelEvent_Source")]
	public static extern int64 QWheelEvent_Source(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QWheelEvent_Delete")]
	public static extern void QWheelEvent_Delete(void* self);
}
public interface IQTabletEvent
{
	void* NativePtr { get; }
}
public class QTabletEvent : IQTabletEvent, IQSinglePointEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(int64 t, IQPointingDevice device, IQPointF pos, IQPointF globalPos, double pressure, float xTilt, float yTilt, float tangentialPressure, double rotation, float z, int64 keyState, int64 button, int64 buttons)
	{
		this.nativePtr = CQt.QTabletEvent_new(t, (device == null) ? null : (void*)device.NativePtr, (pos == default) ? default : (void*)pos.NativePtr, (globalPos == default) ? default : (void*)globalPos.NativePtr, pressure, xTilt, yTilt, tangentialPressure, rotation, z, keyState, button, buttons);
	}
	
	public ~this()
	{
		CQt.QTabletEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QTabletEvent_Clone(this.nativePtr);
	}
	
	public void Pos()
	{
		CQt.QTabletEvent_Pos(this.nativePtr);
	}
	
	public void GlobalPos()
	{
		CQt.QTabletEvent_GlobalPos(this.nativePtr);
	}
	
	public void PosF()
	{
		CQt.QTabletEvent_PosF(this.nativePtr);
	}
	
	public void GlobalPosF()
	{
		CQt.QTabletEvent_GlobalPosF(this.nativePtr);
	}
	
	public int32 X()
	{
		return CQt.QTabletEvent_X(this.nativePtr);
	}
	
	public int32 Y()
	{
		return CQt.QTabletEvent_Y(this.nativePtr);
	}
	
	public int32 GlobalX()
	{
		return CQt.QTabletEvent_GlobalX(this.nativePtr);
	}
	
	public int32 GlobalY()
	{
		return CQt.QTabletEvent_GlobalY(this.nativePtr);
	}
	
	public double HiResGlobalX()
	{
		return CQt.QTabletEvent_HiResGlobalX(this.nativePtr);
	}
	
	public double HiResGlobalY()
	{
		return CQt.QTabletEvent_HiResGlobalY(this.nativePtr);
	}
	
	public int64 UniqueId()
	{
		return CQt.QTabletEvent_UniqueId(this.nativePtr);
	}
	
	public double Pressure()
	{
		return CQt.QTabletEvent_Pressure(this.nativePtr);
	}
	
	public double Rotation()
	{
		return CQt.QTabletEvent_Rotation(this.nativePtr);
	}
	
	public double Z()
	{
		return CQt.QTabletEvent_Z(this.nativePtr);
	}
	
	public double TangentialPressure()
	{
		return CQt.QTabletEvent_TangentialPressure(this.nativePtr);
	}
	
	public double XTilt()
	{
		return CQt.QTabletEvent_XTilt(this.nativePtr);
	}
	
	public double YTilt()
	{
		return CQt.QTabletEvent_YTilt(this.nativePtr);
	}
	
	public int64 Button()
	{
		return CQt.QSinglePointEvent_Button(this.nativePtr);
	}
	
	public int64 Buttons()
	{
		return CQt.QSinglePointEvent_Buttons(this.nativePtr);
	}
	
	public void Position()
	{
		CQt.QSinglePointEvent_Position(this.nativePtr);
	}
	
	public void ScenePosition()
	{
		CQt.QSinglePointEvent_ScenePosition(this.nativePtr);
	}
	
	public void GlobalPosition()
	{
		CQt.QSinglePointEvent_GlobalPosition(this.nativePtr);
	}
	
	public virtual bool IsBeginEvent()
	{
		return CQt.QSinglePointEvent_IsBeginEvent(this.nativePtr);
	}
	
	public virtual bool IsUpdateEvent()
	{
		return CQt.QSinglePointEvent_IsUpdateEvent(this.nativePtr);
	}
	
	public virtual bool IsEndEvent()
	{
		return CQt.QSinglePointEvent_IsEndEvent(this.nativePtr);
	}
	
	public void* ExclusivePointGrabber()
	{
		return CQt.QSinglePointEvent_ExclusivePointGrabber(this.nativePtr);
	}
	
	public void SetExclusivePointGrabber(IQObject exclusiveGrabber)
	{
		CQt.QSinglePointEvent_SetExclusivePointGrabber(this.nativePtr, (exclusiveGrabber == null) ? null : (void*)exclusiveGrabber.NativePtr);
	}
	
	public void* PointingDevice()
	{
		return CQt.QPointerEvent_PointingDevice(this.nativePtr);
	}
	
	public int64 PointerType()
	{
		return CQt.QPointerEvent_PointerType(this.nativePtr);
	}
	
	public virtual void SetTimestamp(uint64 timestamp)
	{
		CQt.QPointerEvent_SetTimestamp(this.nativePtr, timestamp);
	}
	
	public int32 PointCount()
	{
		return CQt.QPointerEvent_PointCount(this.nativePtr);
	}
	
	public void* Point(int32 i)
	{
		return CQt.QPointerEvent_Point(this.nativePtr, i);
	}
	
	public void[] Points()
	{
		return CQt.QPointerEvent_Points(this.nativePtr);
	}
	
	public void* PointById(int32 id)
	{
		return CQt.QPointerEvent_PointById(this.nativePtr, id);
	}
	
	public bool AllPointsGrabbed()
	{
		return CQt.QPointerEvent_AllPointsGrabbed(this.nativePtr);
	}
	
	public bool AllPointsAccepted()
	{
		return CQt.QPointerEvent_AllPointsAccepted(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QPointerEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public void* ExclusiveGrabber(IQEventPoint point)
	{
		return CQt.QPointerEvent_ExclusiveGrabber(this.nativePtr, (point == default) ? default : (void*)point.NativePtr);
	}
	
	public void SetExclusiveGrabber(IQEventPoint point, IQObject exclusiveGrabber)
	{
		CQt.QPointerEvent_SetExclusiveGrabber(this.nativePtr, (point == default) ? default : (void*)point.NativePtr, (exclusiveGrabber == null) ? null : (void*)exclusiveGrabber.NativePtr);
	}
	
	public void ClearPassiveGrabbers(IQEventPoint point)
	{
		CQt.QPointerEvent_ClearPassiveGrabbers(this.nativePtr, (point == default) ? default : (void*)point.NativePtr);
	}
	
	public bool AddPassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_AddPassiveGrabber(this.nativePtr, (point == default) ? default : (void*)point.NativePtr, (grabber == null) ? null : (void*)grabber.NativePtr);
	}
	
	public bool RemovePassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_RemovePassiveGrabber(this.nativePtr, (point == default) ? default : (void*)point.NativePtr, (grabber == null) ? null : (void*)grabber.NativePtr);
	}
	
	public void* Device()
	{
		return CQt.QInputEvent_Device(this.nativePtr);
	}
	
	public int64 DeviceType()
	{
		return CQt.QInputEvent_DeviceType(this.nativePtr);
	}
	
	public int64 Modifiers()
	{
		return CQt.QInputEvent_Modifiers(this.nativePtr);
	}
	
	public void SetModifiers(int64 modifiers)
	{
		CQt.QInputEvent_SetModifiers(this.nativePtr, modifiers);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QInputEvent_Timestamp(this.nativePtr);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QTabletEvent_new")]
	public static extern void* QTabletEvent_new(int64 t, void* device, void* pos, void* globalPos, double pressure, float xTilt, float yTilt, float tangentialPressure, double rotation, float z, int64 keyState, int64 button, int64 buttons);
	[LinkName("QTabletEvent_Clone")]
	public static extern void* QTabletEvent_Clone(void* c_this);
	[LinkName("QTabletEvent_Pos")]
	public static extern void QTabletEvent_Pos(void* c_this);
	[LinkName("QTabletEvent_GlobalPos")]
	public static extern void QTabletEvent_GlobalPos(void* c_this);
	[LinkName("QTabletEvent_PosF")]
	public static extern void QTabletEvent_PosF(void* c_this);
	[LinkName("QTabletEvent_GlobalPosF")]
	public static extern void QTabletEvent_GlobalPosF(void* c_this);
	[LinkName("QTabletEvent_X")]
	public static extern int32 QTabletEvent_X(void* c_this);
	[LinkName("QTabletEvent_Y")]
	public static extern int32 QTabletEvent_Y(void* c_this);
	[LinkName("QTabletEvent_GlobalX")]
	public static extern int32 QTabletEvent_GlobalX(void* c_this);
	[LinkName("QTabletEvent_GlobalY")]
	public static extern int32 QTabletEvent_GlobalY(void* c_this);
	[LinkName("QTabletEvent_HiResGlobalX")]
	public static extern double QTabletEvent_HiResGlobalX(void* c_this);
	[LinkName("QTabletEvent_HiResGlobalY")]
	public static extern double QTabletEvent_HiResGlobalY(void* c_this);
	[LinkName("QTabletEvent_UniqueId")]
	public static extern int64 QTabletEvent_UniqueId(void* c_this);
	[LinkName("QTabletEvent_Pressure")]
	public static extern double QTabletEvent_Pressure(void* c_this);
	[LinkName("QTabletEvent_Rotation")]
	public static extern double QTabletEvent_Rotation(void* c_this);
	[LinkName("QTabletEvent_Z")]
	public static extern double QTabletEvent_Z(void* c_this);
	[LinkName("QTabletEvent_TangentialPressure")]
	public static extern double QTabletEvent_TangentialPressure(void* c_this);
	[LinkName("QTabletEvent_XTilt")]
	public static extern double QTabletEvent_XTilt(void* c_this);
	[LinkName("QTabletEvent_YTilt")]
	public static extern double QTabletEvent_YTilt(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QTabletEvent_Delete")]
	public static extern void QTabletEvent_Delete(void* self);
}
public interface IQNativeGestureEvent
{
	void* NativePtr { get; }
}
public class QNativeGestureEvent : IQNativeGestureEvent, IQSinglePointEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(int64 typeVal, IQPointingDevice dev, IQPointF localPos, IQPointF scenePos, IQPointF globalPos, double value, uint64 sequenceId, uint64 intArgument)
	{
		this.nativePtr = CQt.QNativeGestureEvent_new(typeVal, (dev == null) ? null : (void*)dev.NativePtr, (localPos == default) ? default : (void*)localPos.NativePtr, (scenePos == default) ? default : (void*)scenePos.NativePtr, (globalPos == default) ? default : (void*)globalPos.NativePtr, value, sequenceId, intArgument);
	}
	
	public ~this()
	{
		CQt.QNativeGestureEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QNativeGestureEvent_Clone(this.nativePtr);
	}
	
	public int64 GestureType()
	{
		return CQt.QNativeGestureEvent_GestureType(this.nativePtr);
	}
	
	public int32 FingerCount()
	{
		return CQt.QNativeGestureEvent_FingerCount(this.nativePtr);
	}
